[gd_scene load_steps=2 format=1]

[ext_resource path="res://ui/score_popup.gd" type="Script" id=1]

[node name="score_popup" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 62.0
margin/top = 137.0
margin/right = 44.0
margin/bottom = 149.0
script/script = ExtResource( 1 )

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 70.0
margin/top = 0.0
margin/right = 221.0
margin/bottom = 41.0
text = "<RESULT>"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="overall" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 73.0
margin/top = 210.0
margin/right = 224.0
margin/bottom = 251.0
text = "Perfect Win!!!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="winner" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 47.0
margin/right = 221.0
margin/bottom = 61.0
text = "BLUE WIN!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 75.0
margin/top = 77.0
margin/right = 219.0
margin/bottom = 91.0
text = "Score : 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="blue_team" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 87.0
margin/top = 149.0
margin/right = 231.0
margin/bottom = 163.0
text = "Blue Team\'s HP : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="red_team" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 87.0
margin/top = 183.0
margin/right = 234.0
margin/bottom = 197.0
text = "Red Team\'s HP : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="play" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 86.0
margin/top = 266.0
margin/right = 209.0
margin/bottom = 318.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Press Enter"
flat = false

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]


